syntax = "proto3";

package todo;

message AddTodoRequest {
  string todo = 1;
}

message AddTodoResponse {
  string response = 1;
}

message TodoItem {
  string item = 1;
}

message TodoList {
  repeated TodoItem TodoItems = 1;
}

message ListTodoRequest {
  string request = 1;
}

message ListTodoResponse {
  TodoList TodoItems = 1;
}

service Todo {
  rpc AddTodo(AddTodoRequest) returns 
  (AddTodoResponse);
  rpc ListTodo(ListTodoRequest) returns 
  (ListTodoResponse);
}
